fixed issue with display not showing output, adjusted styles, removed unncessary code

--- a/styles.css
+++ b/styles.css
@@ -4,28 +4,75 @@ html {
     background-color: #023E54;
     background: linear-gradient(325deg, rgba(2,62,84, 0.75), rgba(16,170,192, 0.55));
     min-height: 100%;
-    min-width: 560px;
+    min-width: 580px;
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 700px;
+}
+
+nav {
+    padding: 15px 5px;
+    background-color: whitesmoke;
+    border: 1px solid silver;
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    box-shadow: -4px 5px 6px #023E54;
+}
+nav a {
+    color: #023E54;
+}
+nav a:hover {
+    text-decoration: none;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0 2px;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
 }
 
 button {
     color: #023E54;
-    width: calc(25% - 20px);
+    width: calc(45% - 20px);
     height: 50px;
     border-radius: 15px;
     line-height: 50px;
     font-family: 'Source Sans Pro', sans-serif;
     padding: 0;
     background: linear-gradient(355deg, #DDD, #AAA);
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
     outline: none;
+    margin-top: 10px;
 }
 
 button:active {
     padding-top: 1px;
     padding-left: 1px;
     background: linear-gradient(355deg, #AAA, #DDD);
+}
+
+input {
+    width: calc(45% - 20px);
+    height: 20px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+label {
+    font-size: 18px;
+}
+
+.formInput {
+    text-align: center;
 }
 
 #buttonDiv {
